# tic-tac-toe

./: .gitignore  Dockerfile  config.py  docker-compose.yml  game.py  lobby.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: export-requirements.yml
app/: __init__.py  game.py  lobby.py  main.py
app/static/: index.html  script.js  style.css
app/tests/: test_game.py  test_lobby.py  test_websocket.py
static/: index.html  script.js  style.css
tests/: test_app.py  test_game.py  test_lobby.py  test_websocket.py
