[project]
name = "python-helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.12.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.4",
    "starlette>=0.50.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
dev = [
    "ruff",
    "black",
]

[project.scripts]
start = "uv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
test = "uv run pytest"
